# personalcapital-rs

./: .gitignore  Cargo.toml  rustfmt.toml
examples/: accounts.rs  holdings.rs  investment-type-total.rs  simple.rs
src/: lib.rs  pc_types.rs  serde_util.rs  sort.rs  types.rs
