[package]
name = "personalcapital"
version = "0.1.0"
authors = ["Kevin Darlington <kevin@outroot.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
regex = "1.3.7"
lazy_static = "1.4.0"
serde_json = { version = "1.0.53", features = ["raw_value"] }
cookie_store = "0.11.0"
url = "2.1.1"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.110"
serde_derive = "1.0.110"
percent-encoding = "2.1.0"

[[example]]
name = "investment-type-total"
