[package]
authors = ["Kevin Darlington <kevin@outroot.com>"]
edition = "2018"
name = "personalcapital"
version = "0.1.0"

[dependencies]
async-trait = "0.1.36"
chrono = {version = "0.4.11", features = ["serde"]}
cookie_store = "0.12.0"
env_logger = "0.7.1"
lazy_static = "1.4.0"
log = "0.4.8"
percent-encoding = "2.1.0"
regex = "1.3.7"
reqwest = {version = "0.10.4", features = ["json"]}
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = {version = "1.0.53", features = ["raw_value"]}
thiserror = "1.0"
tokio = {version = "0.2.21", features = ["macros", "blocking", "rt-threaded", "sync", "time"]}

[[example]]
name = "investment-type-total"

[[example]]
name = "simple"
