[package]
authors = ["Kevin Darlington <kevin@outroot.com>"]
edition = "2018"
name = "personalcapital"
version = "0.1.0"

[dependencies]
async-trait = "0.1.42"
chrono = {version = "0.4.19", features = ["serde"]}
cookie_store = "0.12.0"
env_logger = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.11"
percent-encoding = "2.1.0"
regex = "1.4.3"
reqwest = {version = "0.11.0", features = ["json"]}
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = {version = "1.0.61", features = ["raw_value"]}
thiserror = "1.0.23"
tokio = {version = "1.4.0", features = ["full"]}
